bugfix entry data and add invite link api
